--- a/myScala/pom.xml
+++ b/myScala/pom.xml
@@ -11,23 +11,8 @@
     </parent>
 
     <groupId>org.zyc</groupId>
-    <artifactId>FXGL</artifactId>
+    <artifactId>myScala</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.github.almasb</groupId>
-            <artifactId>fxgl</artifactId>
-            <version>11.12</version>
-        </dependency>
-    </dependencies>
-
 
     
 </project>
