--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>spark</module>
         <module>FXGL</module>
         <module>vortex</module>
+        <module>myScala</module>
     </modules>
 
     <properties>
@@ -27,5 +28,16 @@
             <version>2.11.11</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
