--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>FXGL</module>
         <module>vortex</module>
         <module>myScala</module>
+        <module>helloWorld</module>
     </modules>
 
     <properties>
